# AudioVedioLeaning

./: libs.versions.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/baishengye/audiovedioleaning/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/baishengye/audiovedioleaning/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/baishengye/audiovedioleaning/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
oboedemo/: build.gradle.kts
oboedemo/src/androidTest/java/com/baishengye/oboedemo/: ExampleInstrumentedTest.kt
oboedemo/src/main/: AndroidManifest.xml
oboedemo/src/main/cpp/: CMakeLists.txt  oboedemo.cpp
oboedemo/src/main/java/com/baishengye/oboedemo/: MainActivity.kt
oboedemo/src/main/res/values-night/: themes.xml
oboedemo/src/test/java/com/baishengye/oboedemo/: ExampleUnitTest.kt
opengles_demo/: build.gradle.kts
opengles_demo/src/androidTest/java/com/baishengye/opengles_demo/: ExampleInstrumentedTest.kt
opengles_demo/src/main/: AndroidManifest.xml
opengles_demo/src/main/cpp/: CMakeLists.txt
opengles_demo/src/main/cpp/jni/test1_gl_2d/: test1_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/jni/test2_gl_3d/: test2_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/jni/test3_gl_texture/: test3_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/jni/test4_gl_texture_3d/: test4_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/jni/test5_gl_texture_assembly/: test5_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/jni/test6_gl_oop/: test6_NDKRender.cpp  test6_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/jni/test7_gl_buffer/: test7_NDKRender.cpp  test7_OpenGLNDKRender.cpp
opengles_demo/src/main/cpp/util/self/: NDKAndroidLog.h  NDKBuffer.cpp  NDKBuffer.h  NDKImage.cpp  NDKImage.h  NDKRender.h  NDKRenderDef.h  NDKTexture.cpp  NDKTexture.h
opengles_demo/src/main/java/com/baishengye/opengles_demo/: MainActivity.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test1_gl_2d/: GL2DActivity.kt  GL2DRender.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test2_gl_3d/: GL3DActivity.kt  GL3DRender.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test3_gl_texture/: GLTextureActivity.kt  GLTextureRender.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test4_gl_texture_3d/: GLTexture3DActivity.kt  GLTexture3DRender.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test5_gl_texture_assembly/: GLTextureAssemblyActivity.kt  GLTextureAssemblyRender.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test6_gl_oop/: GLOOPActivity.kt  GLOOPRender.kt
opengles_demo/src/main/java/com/baishengye/opengles_demo/test7_gl_buffer/: GLBufferActivity.kt  GLBufferRender.kt
opengles_demo/src/main/res/layout/: activity_gl2d.xml  activity_gl3d.xml  activity_gl_buffer.xml  activity_glt_oop.xml  activity_gltexture.xml  activity_gltexture3d.xml  activity_gltexture_assembly.xml  activity_main.xml
opengles_demo/src/main/res/values/: strings.xml
opengles_demo/src/test/java/com/baishengye/opengles_demo/: ExampleUnitTest.kt
